# HttpServer

./: CMakeLists.txt  main.cpp
SimpleHttpServer/static/: index.html
